--- a/frontend/templates/Login/change_password.html
+++ b/frontend/templates/Login/change_password.html
@@ -1,5 +1,5 @@
 <div class="blue-background">
-    <h2 class="text-center no-margin big-padding-top"><img src="assets/images/logo.png" alt="" height="60px"/></h2>
+    <h2 class="text-center no-margin big-padding-top"><img src="http://www.clipartbest.com/cliparts/9ip/eb5/9ipeb5zkT.png" alt="" height="100px"/></h2>
     <h2 class="text-center">Bienvenido a shield</h2>
     <div class="huge-margin-top" id="login-form">
         <form ng-submit="updatePassword(changePasswordForm)" role="form" ng-init="changePasswordForm = {}" name="login">
@@ -8,19 +8,19 @@
    <h1 class="text-center">
             <div class="col-md-12 col-sm-6">
                 <div class="form-group form-md-line-input small-margin-top ">
-                    <input ng-model="changePasswordForm.password" type="password" class="form-control text-center" id="form_control_1" placeholder="" required title="Input required">
+                    <input ng-model="changePasswordForm.password" type="password" class="form-control text-center" placeholder="" required title="Input required">
                     <label for="form_control_1">Nueva contraseña</label>
                 </div>
             </div>
             <div class="col-md-12 col-sm-6">
                 <div class="form-group form-md-line-input small-margin-top ">
-                    <input ng-model="changePasswordForm.password_confirmation" type="password" class="form-control text-center" id="form_control_1" placeholder="" required title="Input required">
+                    <input ng-model="changePasswordForm.password_confirmation" type="password" class="form-control text-center" placeholder="" required title="Input required">
                     <label for="form_control_1">Confirma tu contraseña</label>
                 </div>
             </div>
             <button type="submit" name="name" id="login-button" class="btn blue">Cambiar contraseña</button>
               </h1>
-              <h5 class="text-center small-margin-top">Si en algun momento la olvidas, puedes recuperarla desde la pagina de inicio de sesión</h5>
+              <h5 class="text-center small-margin-top">Si en algún momento la olvidas, puedes recuperarla desde la pagina de inicio de sesión</h5>
         </form>
     </div>
 </div>
