--- a/frontend/templates/Residents/index_vehicules.html
+++ b/frontend/templates/Residents/index_vehicules.html
@@ -47,7 +47,7 @@
                         <h5>Placa</h5>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 small-margin-top ">
-                        <button type="submit" class="btn blue "><i class="fa fa-pencil "></i></button>
+                        <button type="submit" ui-sref="editCondominoVehicule({id:vehicule.id})" class="btn blue "><i class="fa fa-pencil "></i></button>
                         <button type="submit" ng-click="deleteVehicule(vehicule.id,vehicule.house_id,vehicule.license_plate)" class="btn red "><i class="fa fa-trash "></i></button>
                     </div>
 
