--- a/frontend/templates/admin/house/form.html
+++ b/frontend/templates/admin/house/form.html
@@ -11,7 +11,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Registrar</a>
+            <a href="">{{title}}</a>
         </li>
     </ul>
     <div class="page-toolbar">
