--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -16,18 +16,8 @@
             <!-- DOC: To remove the sidebar toggler from the sidebar you just need to completely remove the below "sidebar-toggler-wrapper" LI element -->
 
             <!-- DOC: To remove the search box from the sidebar you just need to completely remove the below "sidebar-search-wrapper" LI element -->
-            <li class="sidebar-search-wrapper">
-                <!-- BEGIN RESPONSIVE QUICK SEARCH FORM -->
-                <!-- DOC: Apply "sidebar-search-bordered" class the below search form to have bordered search box -->
-                <!-- DOC: Apply "sidebar-search-bordered sidebar-search-solid" class the below search form to have bordered & solid search box -->
-                <form class="sidebar-search " action="extra_search.html" method="POST">
-                    <a href="javascript:;" class="remove"><i class="icon-close"></i></a>
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search..."></input>
-                        <span class="input-group-btn"><a href="javascript:;" class="btn submit"><i class="icon-magnifier"></i></a></span>
-                    </div>
-                </form>
-                <!-- END RESPONSIVE QUICK SEARCH FORM -->
+            <li class="sidebar-search-wrapper height-6 hidden-xs hidden-sm">
+
             </li>
 
             <li class="" ng-show="isAdmin()" ng-class="{ 'active' : active === 'residents' ||  active === 'houses' ||  active === 'vehicules'}">
@@ -57,7 +47,7 @@
                     </li>
                 </ul>
             </li>
-            <li ng-show="isAdmin()" class="start" ng-class="{ 'active' : active === 'officers'} ">
+            <li ng-show="isAdmin()" class="start" ng-class="{ 'active' : active === 'officers' ||  active === 'watches'} ">
                 <a href="javascript:;">
                     <i class="fa fa-lock" aria-hidden="true"></i>
                     <span class="title "> Seguridad</span>
@@ -70,7 +60,7 @@
                             <i class="fa fa-shield" aria-hidden="true"></i> Oficiales
                         </a>
                     </li>
-                    <li ui-sref="watches()">
+                    <li ui-sref="watches()" ng-class="{ 'active' : active === 'watches'}">
                         <a href="">
                             <i class="fa fa-clock-o" aria-hidden="true"></i> Turnos
                         </a>
