--- a/frontend/templates/admin/officer/form.html
+++ b/frontend/templates/admin/officer/form.html
@@ -10,7 +10,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Registrar</a>
+            <a href="">{{title}}</a>
         </li>
     </ul>
     <div class="page-toolbar">
@@ -48,20 +48,20 @@
 
                             <div class="col-md-6 col-sm-6">
                                 <div class="form-group form-md-line-input ">
-                                    <input ng-model="name" type="text" class="form-control  letters gray-font" id="form_control_1" required>
+                                    <input ng-model="name" type="text" class="form-control  letters gray-font" id="form_control_1" required style="text-transform: capitalize;">
                                     <label for="form_control_1" class="font-15">Nombre</label>
                                 </div>
 
 
 
                                 <div class="form-group form-md-line-input ">
-                                    <input ng-model="last_name" type="text" class="form-control  letters gray-font" id="form_control_1" required>
+                                    <input ng-model="last_name" type="text" class="form-control  letters gray-font" id="form_control_1" required style="text-transform: capitalize;">
                                     <label for="form_control_1" class="font-15">Primer Apellido</label>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div class="form-group form-md-line-input">
-                                    <input ng-model="second_last_name" type="text" class="form-control  letters gray-font" id="form_control_1" required>
+                                    <input ng-model="second_last_name" type="text" class="form-control  letters gray-font" id="form_control_1" required style="text-transform: capitalize;">
                                     <label for="form_control_1" class="font-15">Segundo Apellido</label>
                                 </div>
                                 <div class="form-group form-md-line-input l">
