--- a/frontend/templates/admin/resident/info.html
+++ b/frontend/templates/admin/resident/info.html
@@ -33,7 +33,9 @@
                             <i class="fa fa-user font-green-haze"></i>
                             <span class="caption-subject bold uppercase">{{title}}</span>
                         </div>
-
+                        <div class="actions">
+                            <span class="font-15 gray-font">Autorizador de filial: <span class="bold">{{authorizer}}</span> </span>
+                        </div>
                     </div>
                     <div class="portlet-body form">
                         <div ng-show="permisson===2" class="col-md-offset-9 col-md-3 col-sm-offset-8 col-sm-4 col-xs-12">
