--- a/frontend/assets/global/css/main.css
+++ b/frontend/assets/global/css/main.css
@@ -13,7 +13,7 @@
 	border: solid 1px #2b3643;
 }
 .light-gray-font{
-	color: #888888 !important;
+	color: #b4bcc8 !important;
 }
 .color-pickerr{
 	margin-top: -20px!important;
@@ -202,6 +202,9 @@ height: 100%;
 }
 .height-80-percent{
   height: 80%;
+}
+.height-6{
+	height: 37px !important;
 }
 #fail-icon{
   font-size: 250px !important;
