--- a/frontend/templates/admin/header.html
+++ b/frontend/templates/admin/header.html
@@ -166,12 +166,12 @@
 					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 						<img alt="" class="img-circle" src="../../assets/admin/layout/img/avatar3_small.jpg" />
 						<span class="username username-hide-on-mobile">
-					{{user.profile_name}} </span>
+					{{user.profile_name}} / {{user.house_or_condominum_name}}</span>
 						<i class="fa fa-angle-down"></i>
 					</a>
 					<ul class="dropdown-menu dropdown-menu-default">
-						<li>
-							<a href="extra_profile.html">
+						<li ui-sref="editProfile({id:user.id})" ng-show="isAdmin()">
+							<a href="">
 								<i class="icon-user"></i> Mi perfil </a>
 						</li>
 
