--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -17,7 +17,7 @@
 	<link href="../../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" type="text/css" href="../../assets/global/plugins/bootstrap-colorpicker/css/colorpicker.css"/>
+	<link rel="stylesheet" type="text/css" href="../../assets/global/plugins/bootstrap-colorpicker/css/colorpicker.css" />
 	<!-- END GLOBAL MANDATORY STYLES -->
 	<!-- BEGIN THEME STYLES -->
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
@@ -39,7 +39,7 @@
 <div ui-view="login"></div>
 <div ui-view="access"></div>
 <div class="gray">
-	<div id="rightView" ng-hide="$state.current.name == 'login' || $state.current.name == 'access' || $state.current.name == 'changePassword'  || $state.current.name == 'requestPassword' ">
+	<div id="rightView" ng-hide="$state.current.name == 'login' || $state.current.name == 'access' || $state.current.name == 'changePassword'  || $state.current.name == 'requestPassword' || $state.current.name == 'registerProfile' ">
 		<div ui-view="header" class="page-header-fixed page-quick-sidebar-over-content">
 
 		</div>
