--- a/frontend/templates/admin/watches/index.html
+++ b/frontend/templates/admin/watches/index.html
@@ -72,7 +72,7 @@
                         <span ng-click="filterWatches()" class="float-right pointer" ng-show="showBackBtn==true"><i class="fa fa-arrow-circle-o-left font-green font-back" aria-hidden="true"></i></span>
                     </div>
                     <div class="col-md-10 col-lg-10 col-sm-10 col-xs-11">
-                      <h2 class="text-center" ng-show="noData==true">No existe ningún turno registrado aún</h2>
+                        <h2 class="text-center" ng-show="noData==true">No existe ningún turno registrado aún</h2>
                         <div class="portlet box dark-blue" ng-show="showTable==false">
                             <div class="portlet-title">
                                 <h4 class="text-center" ng-show="currentTurn==true">Turno actual</h4>
@@ -95,7 +95,7 @@
                                         <h5 class="text-center bold">Oficiales</h5>
                                     </div>
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                        <table class="table table-striped table-bordered table-advance table-hover">
+                                        <table class="table table-striped table-bordered table-advance table-hover gray-font">
                                             <thead>
                                                 <tr>
                                                     <th>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="portlet-body dark-blue-border col-lg-12 col-sm-12 col-xs-12 col-md-12">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                  <h4 class="text-center" ng-show="watches.length == 0"> No se encontraron registros entre estas fechas</h4>
+                                    <h4 class="text-center" ng-show="watches.length == 0"> No se encontraron registros entre estas fechas</h4>
                                     <table ng-show="watches.length > 0" class="table table-striped table-bordered table-advance table-hover">
                                         <thead>
                                             <tr>
@@ -153,7 +153,7 @@
                                                 <td>
                                                     {{watch.final_time}}
                                                 </td>
-                                                <td >
+                                                <td>
                                                     Ver Detalle
                                                 </td>
                                             </tr>
